k8s-kustomize/examples/chapter-04/nginx-webapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-webapp
  labels:
    app: nginx-webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-webapp
